feat: enhance fiagro data parsing and fetching
- Updated `parseListFromHomepage` to normalize hrefs and improve error handling.
- Introduced `try-fiagro-service.ts` for testing fetching and filtering of fiagros.
- Modified `FiagroExplorer` component to clear sectors filter.
- Refactored `useFiagros` hook to initialize B3 fiagros immediately and improve data fetching logic.
- Added `fiagroScraper.ts` service for structured data fetching and parsing.
- Updated TypeScript configurations to include necessary types for testing.
- Updated dependencies in `yarn.lock` for improved stability and performance.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -36,5 +36,6 @@
   "[markdown]": {
     "editor.formatOnSave": false,
     "editor.wordWrap": "on"
-  }
+  },
+  "cSpell.words": ["Fiagro", "fiagros", "Fiagros"]
 }
