--- a/vercel.json
+++ b/vercel.json
@@ -2,9 +2,10 @@
   "version": 2,
   "framework": "vite",
   "outputDirectory": "dist",
+  "trailingSlash": false,
   "rewrites": [
     {
-      "source": "/((?!api/).*)",
+      "source": "/((?!api(/|$)).*)",
       "destination": "/index.html"
     }
   ]
