Refactor API structure and update documentation
- Moved OpenAPI specification import path in api/openapi.ts
- Added comprehensive API documentation in docs/api.md
- Updated architecture documentation to reflect new project structure and versioning
- Created frontend documentation detailing component structure and hooks
- Removed public/docs.html and integrated Swagger UI directly in local API response
- Refactored local-api.ts to serve Swagger UI dynamically
- Updated scraping service path in try-fiagro-service.ts
- Deleted obsolete fiagroScraper.ts from src/services

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -37,5 +37,5 @@
     "editor.formatOnSave": false,
     "editor.wordWrap": "on"
   },
-  "cSpell.words": ["Fiagro", "fiagros", "Fiagros"]
+  "cSpell.words": ["fiagro", "Fiagro", "fiagros", "Fiagros"]
 }
